# dockerised-full-stack-template

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  wait-for-postgres.sh
backend/backend/: middleware.py  schema.py  settings.py  urls.py  views.py
backend/blog/: schema.py
backend/users/: schema.py  urls.py  views.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/components/hoc/: AuthWrapper.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx  protected.tsx  register.tsx
frontend/store/: authSlice.ts  index.ts
frontend/store/api/: authApi.ts  baseQueryWithReauth.ts  getAuthData.ts  login.ts  logout.ts  refreshToken.ts  register.ts
