[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Xinlyu Wang <xinlalalele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
django = "5.0.7"
django-cors-headers = "4.3.1"
djangorestframework = "3.15.1"
gunicorn = "22.0.0"
packaging = "24.0"
psycopg2-binary = "2.9.9"
sqlparse = "0.5.0"
typing-extensions = "4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
